--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -2558,13 +2558,33 @@
     </dependency>
     <dependency>
       <groupId>org.mock-server</groupId>
+      <artifactId>mockserver-client-java</artifactId>
+      <version>5.11.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mock-server</groupId>
       <artifactId>mockserver-core</artifactId>
       <version>3.10.7</version>
     </dependency>
     <dependency>
       <groupId>org.mock-server</groupId>
+      <artifactId>mockserver-core</artifactId>
+      <version>5.11.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mock-server</groupId>
+      <artifactId>mockserver-logging</artifactId>
+      <version>5.3.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mock-server</groupId>
       <artifactId>mockserver-netty</artifactId>
       <version>3.10.7</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mock-server</groupId>
+      <artifactId>mockserver-netty</artifactId>
+      <version>5.11.2</version>
     </dependency>
     <dependency>
       <groupId>org.mockito</groupId>
