--- a/dev/com.ibm.ws.jaxrs.2.0.client_fat/build.gradle
+++ b/dev/com.ibm.ws.jaxrs.2.0.client_fat/build.gradle
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2018 IBM Corporation and others.
+ * Copyright (c) 2018, 2021 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -12,7 +12,6 @@ apply from: '../wlp-gradle/subprojects/maven-central-mirror.gradle'
 
 configurations {
   thirdpartyjerseyclient
-  mockserver
 }
 
 configurations.thirdpartyjerseyclient {
@@ -39,39 +38,10 @@ dependencies {
 	'org.glassfish.hk2:osgi-resource-locator:1.0.1',
 	'javax.persistence:persistence-api:1.0.2',
 	'javax.validation:validation-api:1.1.0.Final'
-  mockserver('org.mock-server:mockserver-netty:3.10.7') {
-    exclude group: 'xerces', module: 'xerces'
-  }
-  mockserver('org.mock-server:mockserver-client-java:3.10.7') {
-    exclude group: 'xerces', module: 'xerces'
-  }
-  mockserver('org.mock-server:mockserver-core:3.10.7-IBM20191022') { 
-    exclude group: 'xerces', module: 'xerces'
-  }
-  mockserver 'com.google.guava:guava:18.0'
-  mockserver 'io.netty:netty-buffer:4.1.8.Final'
-  mockserver 'io.netty:netty-codec:4.1.8.Final'
-  mockserver 'io.netty:netty-codec-http:4.1.8.Final'
-  mockserver 'io.netty:netty-codec-socks:4.1.8.Final'
-  mockserver 'io.netty:netty-common:4.1.8.Final'
-  mockserver 'io.netty:netty-handler:4.1.8.Final'
-  mockserver 'io.netty:netty-transport:4.1.8.Final'
-  mockserver 'junit:junit:4.12'
-  mockserver 'org.bouncycastle:bcprov-jdk15on:1.56'
-  mockserver 'org.slf4j:slf4j-api:1.7.25'
-  mockserver 'ch.qos.logback:logback-classic:1.1.3'
-  mockserver 'janino:janino:2.5.10'
-  mockserver 'org.mock-server:mockserver-logging:3.10.7'
-  mockserver project(':io.openliberty.com.fasterxml.jackson')
-  mockserver 'com.github.fge:json-schema-validator:2.2.6'
-  mockserver 'com.jcraft:jzlib:1.1.3'
-  mockserver 'javax.servlet:javax.servlet-api:3.0.1'
-  mockserver 'org.apache.commons:commons-lang3:3.4'
-  mockserver project(':com.ibm.ws.org.apache.commons.io')
-  mockserver 'org.bouncycastle:bcprov-jdk15on:1.56'
-  mockserver 'org.bouncycastle:bcmail-jdk15on:1.56'
-  mockserver 'org.bouncycastle:bcpkix-jdk15on:1.56'
-  mockserver 'org.skyscreamer:jsonassert:1.2.3'
+  requiredLibs 'org.mock-server:mockserver-client-java:5.11.2',
+    'org.mock-server:mockserver-core:5.11.2',
+    'org.mock-server:mockserver-logging:5.3.0',
+    'org.mock-server:mockserver-netty:5.11.2'
 }
 
 task addThirdPartyJerseyClient(type: Copy) {
@@ -79,14 +49,8 @@ task addThirdPartyJerseyClient(type: Copy) {
   into "${buildDir}/autoFVT/publish/shared/resources/thirdpartyjerseyclient/"
 }
 
-task addMockserver(type: Copy) {
-  from configurations.mockserver
-  into "${buildDir}/autoFVT/publish/shared/resources/mockserver/"
-}
-
 addRequiredLibraries {
   dependsOn addThirdPartyJerseyClient
-  dependsOn addMockserver
 }
 
 addRequiredLibraries.dependsOn addJakartaTransformer
