--- a/dev/com.ibm.ws.jca_fat/publish/servers/com.ibm.ws.jca.fat/bootstrap.properties
+++ b/dev/com.ibm.ws.jca_fat/publish/servers/com.ibm.ws.jca.fat/bootstrap.properties
@@ -9,7 +9,7 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 
-com.ibm.ws.logging.trace.specification=*=event=enabled:logservice=all:rarInstall=all:WAS.j2c=all:test=all:web.*=all:container.service=all:app.manager=all:EJBContainer=all
+com.ibm.ws.logging.trace.specification=WAS.j2c=all:ConnectionPoolMonitor=all
 com.ibm.ws.logging.max.file.size=0
 osgi.console=5678
 
