--- a/dev/wlp-gradle/subprojects/fat.gradle
+++ b/dev/wlp-gradle/subprojects/fat.gradle
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2019, 2020 IBM Corporation and others.
+ * Copyright (c) 2019, 2021 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v1.0
  * which accompanies this distribution, and is available at
@@ -269,11 +269,9 @@ task autoFVT {
     }
 
     // Copy the component test libs
-    // TODO: It looks like the componenttest.app.jar got combined into something else, so this is now way more source in the jar than was there before. This might need changing then.
     copy {
       from project(':com.ibm.ws.componenttest').buildDir
-      include 'com.ibm.ws.componenttest.jar'
-      rename 'com.ibm.ws.componenttest.jar', 'componenttest.app.jar'
+      include 'componenttest.app.jar'
       into new File(autoFvtDir, 'lib')
     }
 
