--- a/dev/com.ibm.websphere.appserver.api.authData.jakarta/.project
+++ b/dev/com.ibm.websphere.appserver.api.authData.jakarta/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.ibm.websphere.appserver.spi.globalhandler.ee9</name>
+	<name>com.ibm.websphere.appserver.api.authData.jakarta</name>
 	<comment></comment>
 	<projects>
 	</projects>
