--- a/dev/com.ibm.ws.wsbytebuffer_fat/publish/servers/FATServer/bootstrap.properties
+++ b/dev/com.ibm.ws.wsbytebuffer_fat/publish/servers/FATServer/bootstrap.properties
@@ -9,5 +9,5 @@
 #     IBM Corporation - initial API and implementation
 ###############################################################################
 bootstrap.include=../testports.properties
-com.ibm.ws.logging.trace.specification=*=info:HealthAction=all:HealthAnalyzer=all:TCPChannel=all:HTTPChannel=all:GenericBNF=all:ChannelFramework=all
-	
+com.ibm.ws.logging.trace.specification=*=info:HealthAction=all:HealthAnalyzer=all:TCPChannel=all:HTTPChannel=all:GenericBNF=all:ChannelFramework=all:com.ibm.ws.class.load.com.ibm.websphere.wsbytebuffer.*=all
+#liberty.jvm.debug="-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=7777"
