--- a/dev/io.openliberty.jigawatts/.project
+++ b/dev/io.openliberty.jigawatts/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>io.openliberty.criu.lib</name>
+	<name>io.openliberty.jigawatts</name>
 	<comment></comment>
 	<projects>
 	</projects>
