--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -87,3 +87,6 @@ com.ibm.ws.jbatch.cdi.BatchCDIInjectionExtension.xml=jakarta-batch.properties
 
 #Rest Handler validator FAT
 validatorCustomLoginModuleServer.xml=jakarta-metatype.properties
+
+#webCache
+com.ibm.ws.cache.servlet.xml=jakarta-xml-servletContainerInitializer.properties
