--- a/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
+++ b/dev/wlp-jakartaee-transform/rules/jakarta-xml-master.properties
@@ -90,3 +90,6 @@ validatorCustomLoginModuleServer.xml=jakarta-metatype.properties
 
 #webCache
 com.ibm.ws.cache.servlet.xml=jakarta-xml-servletContainerInitializer.properties
+
+#grpc
+io.openliberty.grpc.internal.servlet.GrpcServerComponent.xml=jakarta-xml-servletContainerInitializer.properties
