--- a/dev/com.ibm.ws.security.oauth.oidc_fat.common/build.gradle
+++ b/dev/com.ibm.ws.security.oauth.oidc_fat.common/build.gradle
@@ -335,22 +335,26 @@ task testUserinfoEndpoint_ZIP (type: Zip, dependsOn: classes) {
   /* start of jose4j copy */
   /* copy contents of the jose4j jar into our test app - we don't have another way to get to the jar */
   from(zipTree("../com.ibm.ws.org.jose4j/build/libs/com.ibm.ws.org.jose4j.jar")) {
+    exclude("META-INF/MANIFEST.MF")
     into "WEB-INF/classes"
   }
   /* end of jose4j copy */
   /* start of slf4j copy */
   /* copy contents of the slf4j jar into our test app - we don't have another way to get to the jar */
   from(zipTree("../com.ibm.ws.org.slf4j.api/build/libs/com.ibm.ws.org.slf4j.api.1.7.7.jar")) {
+    exclude("META-INF/MANIFEST.MF")
     into "WEB-INF/classes"
   }
   /* start of common security fat copy */
   /* copy contents of the common security fat jar into our test app - we don't have another way to get to the jar */
   from(zipTree("../com.ibm.ws.security.fat.common/build/libs/com.ibm.ws.security.fat.common.jar")) {
+    exclude("META-INF/MANIFEST.MF")
     into "WEB-INF/classes"
   }
     /* start of common security jwt fat copy */
   /* copy contents of the common security fat jar into our test app - we don't have another way to get to the jar */
   from(zipTree("../com.ibm.ws.security.fat.common.jwt/build/libs/com.ibm.ws.security.fat.common.jwt.jar")) {
+    exclude("META-INF/MANIFEST.MF")
     into "WEB-INF/classes"
   }
 }
