--- a/dev/com.ibm.ws.jaxws.X.wsat_fat/.classpath
+++ b/dev/com.ibm.ws.jaxws.X.wsat_fat/.classpath
@@ -10,11 +10,7 @@
 	<classpathentry kind="src" path="test-applications/policyAttachmentsService3/.apt_generated"/>
 	<classpathentry kind="src" path="test-applications/policyAttachmentsService3/src"/>
 	<classpathentry kind="src" path="test-applications/simpleTestService/src"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-15">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="src" path="/fattest.simplicity"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
